tests/fails/f30.t

terra bar() end

terra foo()
    return bar() + 3
end
foo()
